// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decompileAll should decompile wallet v1 1`] = `
"SETCP0
s0 PUSH
IFNOTRET
INC
32 THROWIF
512 PUSHINT
LDSLICEX
s0 PUSH
32 PLDU
c4 PUSH
CTOS
32 LDU
256 LDU
ENDS
s1 s2 XCPU
EQUAL
33 THROWIFNOT
s2 PUSH
HASHSU
s0 s4 s4 XC2PU
CHKSIGNU
34 THROWIFNOT
ACCEPT
s0 s1 XCHG
32 LDU
s1 POP
s0 PUSH
SREFS
<{
  8 LDU
  LDREF
  s0 s2 XCHG
  SENDRAWMSG
}> PUSHCONT
IF
ENDS
INC
NEWC
32 STU
256 STU
ENDC
c4 POP"
`;

exports[`decompileAll should decompile wallet v2 1`] = `
"SETCP0
s0 PUSH
IFNOTRET
s0 PUSH
85143 PUSHINT
EQUAL
<{
  s0 POP
  c4 PUSH
  CTOS
  32 PLDU
}> PUSHCONT
IFJMP
INC
32 THROWIF
9 PUSHPOW2
LDSLICEX
s0 PUSH
32 LDU
32 LDU
s0 s1 XCHG
NOW
LEQ
35 THROWIF
c4 PUSH
CTOS
32 LDU
256 LDU
ENDS
s3 s1 XCPU
EQUAL
33 THROWIFNOT
s0 s3 XCHG
HASHSU
s0 s4 s2 XC2PU
CHKSIGNU
34 THROWIFNOT
ACCEPT
s0 s2 XCHG
<{
  s0 PUSH
  SREFS
}> PUSHCONT
<{
  8 LDU
  LDREF
  s0 s2 XCHG
  SENDRAWMSG
}> PUSHCONT
WHILE
ENDS
INC
NEWC
32 STU
256 STU
ENDC
c4 POP"
`;
